content/ljtech/collections/web-fundamentals/posts/web-fundamentals-html/box-model/src/stylesheet.css
:root {
	--surface-bg: #c8e6ff;
	--page-bg: #e5f2ff;

	--layer-margin-bg: #ffc68b;
	--layer-border-bg: #fdffb2;
	--layer-padding-bg: #a3f0b7;
	--layer-content-bg: #8fbbeb;

	--border-color: #202020;
	--border-solid: solid 1px var(--border-color);
	--border-dashed: dashed 1px var(--border-color);
	--border-radius: 1rem;

	--transition: all 0.5s ease;
}

* {
	margin: 0;
	padding: 0;
	box-sizing: border-box;
}

body {
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;
	gap: 2rem;
	height: 100vh;
	width: 100vw;
	max-width: 100%;
	background-color: var(--page-bg);
	font-family: Figtree, sans-serif;
	font-weight: 500;
	line-height: 1.3;
}

.layer {
	position: relative;
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;
	gap: 0.25rem;
	padding: 1.5rem;
	background-color: var(--page-bg);
}

.layer,
.layer * {
	transition: var(--transition);
}

.layer:not(.layer .layer) {
	max-width: 28rem;
}

.label {
	position: absolute;
	top: 0.1rem;
	left: 50%;
	transform: translateX(-50%);
	text-align: center;
	visibility: hidden;
	opacity: 0;
}

.layer-margin,
.layer-padding {
	border: var(--border-dashed);
	border-color: transparent;
}

.layer-border,
.layer-content {
	border: var(--border-solid);
	border-color: transparent;
}

.layer-border {
	background-color: var(--surface-bg);
	border-radius: var(--border-radius);
}

.layer-padding {
	border-radius: var(--border-radius);
}

.layer-content {
	padding: 0;
}

.layer-content .label {
	top: 50%;
	left: 50%;
	transform: translate(-50%, -50%);
}

.content {
	display: flex;
	flex-direction: column;
	gap: 1rem;
}

.content h2 {
	line-height: 1.1;
}

[data-box-model-active] .label {
	visibility: visible;
	opacity: 1;
}

[data-box-model-active] .layer {
	border-color: var(--border-color);
}

[data-box-model-active] .layer-margin {
	background-color: var(--layer-margin-bg);
}

[data-box-model-active] .layer-border {
	background-color: var(--layer-border-bg);
}

[data-box-model-active] .layer-padding {
	background-color: var(--layer-padding-bg);
}

[data-box-model-active] .layer-content {
	background-color: var(--layer-content-bg);
}

[data-box-model-active] .content {
	visibility: hidden;
	opacity: 0;
}

button {
	background-color: var(--surface-bg);
	padding: 1rem 1.5rem;
	border: none;
	border-radius: 9999px;
	font-size: 1rem;
	font-weight: 600;
	cursor: pointer;
}

